[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # `full` 特性确保我们拥有所有需要的功能（如TCP、文件系统、计时器等）
# 优雅地创建自定义错误类型，自动实现 Display, Error, From
thiserror = "1.0"

# 高效处理字节流的工具，比 Vec<u8> 更适合做网络缓冲区
bytes = "1"

# 现代化的日志和追踪框架
tracing = "0.1"
tracing-subscriber = "0.3"

memchr = "2.7"

itoa="1.0"

lexical-core ="0.8"

serde= { version = "1.0", features = ["derive"] }
serde_json="1.0"

once_cell = "1.18"